--- a/docs/api-reference/state.mdx
+++ b/docs/api-reference/state.mdx
@@ -133,11 +133,11 @@ async function Workflow() {
 
   return (
     <Ralph maxIterations={10}>
-      {phase === "start" && (
+      <If condition={phase === "start"}>
         <Claude onFinished={() => updatePhase("done")}>
           Complete the task.
         </Claude>
-      )}
+      </If>
     </Ralph>
   );
 }
