--- a/docs/components/review.mdx
+++ b/docs/components/review.mdx
@@ -124,16 +124,16 @@ function ReviewWorkflow() {
 
   return (
     <Ralph maxIterations={5}>
-      {phase === "implement" && (
+      <If condition={phase === "implement"}>
         <Claude
           allowedTools={["Edit", "Write"]}
           onFinished={() => setPhase("review")}
         >
           Implement the feature.
         </Claude>
-      )}
+      </If>
 
-      {phase === "review" && (
+      <If condition={phase === "review"}>
         <Review
           target={{ type: "diff", ref: "main" }}
           criteria={[
@@ -151,7 +151,7 @@ function ReviewWorkflow() {
             }
           }}
         />
-      )}
+      </If>
     </Ralph>
   );
 }
