docs: simplify If example

--- a/docs/components/if.mdx
+++ b/docs/components/if.mdx
@@ -89,21 +89,7 @@ function Workflow() {
 }
 ```
 
-## Comparison
-
-### Before (Inline Conditional)
-
-```tsx
-{phase === "implement" && (
-  <Phase name="Implementation">
-    <Step name="implement">
-      <Claude>Implement the feature.</Claude>
-    </Step>
-  </Phase>
-)}
-```
-
-### After (If Component)
+## Example
 
 ```tsx
 <If condition={phase === "implement"}>
