docs: standardize on reactiveDb naming for reactive queries

--- a/docs/api-reference/state.mdx
+++ b/docs/api-reference/state.mdx
@@ -197,7 +197,7 @@ interface Transition {
 ## Related
 
 <CardGroup cols={2}>
-  <Card title="State Management" icon="database" href="/concepts/state-management">
+  <Card title="Database Persistence" icon="database" href="/concepts/database-persistence">
     State management concepts
   </Card>
   <Card title="Database Persistence" icon="hard-drive" href="/concepts/database-persistence">
