--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -135,7 +135,7 @@ This reactive model means your agent's behavior emerges from your component logi
 ### npm Package (Programmatic)
 
 ```bash
-bun add smithers
+bun add smithers-orchestrator
 ```
 
 ## Next Steps
